Cart test class is updated